<resources>
    <string name="app_name">Gastos2</string>
    <string name="shop_address_shop_categories_etc">Shop Address, Shop Categories..</string>
    <string name="set_up_password_for_logging_in">Set up password for Logging in</string>
    <string name="security">Security</string>
    <string name="set_default_to_send_and_recieve_money">Set default to send and receive money</string>
    <string name="refer_and_earn">Refer and Earn</string>
    <string name="earn_money_through_referrals">Earn money through referrals</string>
    <string name="how_did_you_like_using_the_app">How did you like using the app</string>
    <string name="rate_us">Rate us</string>
    <string name="make_greivance_regarding_an_issue">Make greivance regarding an issue.</string>
    <string name="help_and_support">Help and Support</string>
    <string name="view_settings_and_manage_them">View settings and manage them.</string>
    <string name="log_out">Log Out</string>
    <string name="log_out_of_session">Log out of session</string>
    <string name="enter_your_information_to_start_using_the_gastos_app">Enter your information to start using the Gastos App</string>
    <string name="enter_your_shop_address">Enter Your Shop Address</string>
    <string name="landmark">Landmark</string>
    <string name="name_of_place">Name of Place</string>
    <string name="pin_code">Pin Code</string>
    <string name="transaction_details">Transaction Details</string>
    <string name="view_details_of_transaction">View details of transaction</string>
    <string name="amount_received">Amount Received</string>
    <string name="rupees_one_thousand_twenty_two_only">Rupees one thousand twenty two only</string>
    <string name="paid_at_05_02_pm_01_may_2022">Paid at 05:02 PM, 01 May 2022</string>
    <string name="paid_by">Paid By</string>
    <string name="basant_kumar">Basant Kumar</string>
    <string name="paid_with">Paid With</string>
    <string name="paid_at">Paid At</string>
    <string name="billed_amount">Billed Amount</string>
    <string name="_1200_00">₹1200.00</string>
    <string name="discount_offered">Discount Offered</string>
    <string name="_178_00">₹178.00</string>
    <string name="_1022_00">₹1022.00</string>
    <string name="received_payments">Received Payments</string>
    <string name="view_the_list_of_contacts_you_have_blocked">View the list of contacts you have blocked.</string>
    <string name="_91_9834989189">+91 9834989189</string>
    <string name="_22nd_may_2022">22nd May 2022</string>
    <string name="list_of_discounts_provided_to_customers">List of discounts provided to customers.</string>
    <string name="complete_your_profile_to_start_using_the_gastos_app">Complete your Profile to start using the Gastos App.</string>
    <string name="complete_your_profile">Complete your Profile!</string>
    <string name="complete_profile">Complete Profile</string>
    <string name="become_a_gastos_marketplace_member">Become a Gastos Marketplace Member!</string>
    <string name="become_a_gastos_member_to_get_featured_on_gastos_marketplace">Become a Gastos member to get featured on Gastos Marketplace.</string>
    <string name="subscribe_to_marketplace_membership">Subscribe to Marketplace Membership</string>
    <string name="accept_payment_on_google_pay_for_business_qr_to_win_weekly_cashbacks">Accept payment on Google Pay for Business QR to win weekly cashbacks!</string>
    <string name="recent_payment">Recent Payment</string>
    <string name="no_payments_yet">No Payments Yet</string>
    <string name="view_qr_code">View QR Code</string>
    <string name="view_my_qr_code">View my QR Code</string>
    <string name="set_this_as_the_default_qr_to_recieve_payments">Set this as the default QR to recieve payments</string>
    <string name="scan_the_qr_code_to_add_a_payment_method_scan_the_qr_code_to_add_a_payment_method">Scan the QR code to Add a payment method.Scan the QR code to Add a payment method.</string>
    <string name="your_opinion_matters_to_us">Your Opinion matters to us!</string>
    <string name="add_discount_to_the_store_store_page_to_attract_more_customers">Add discount to the store store page to attract more customers!</string>
    <string name="we_work_super_hard_to_give_you_our_best_and_would_like_to_know_how_you_would_rate_our_app">We work super hard to give you our best and would like to know how you would rate our app.</string>
    <string name="i_ll_do_it_later">I’ll do it later</string>
    <string name="sure">Sure!</string>
    <string name="dining">Dining</string>
    <string name="air_conditioning">Air Conditioning</string>
    <string name="wifi">WIFI</string>
    <string name="you_ll_be_receiving_all_of_your_payments_on_the_bank_account_linked_with_this_qr">You’ll be receiving all of your payments on the bank account linked with this QR.</string>
    <string name="add_discount">Add Discount</string>
    <string name="set_your_discounts_at_minimum_order_bill_value_you_can_also_add_more_discounts_at_multiple_minimum_order_bill_values">Set your discounts at minimum order bill value you can also add more discounts at multiple Minimum order bill values</string>
    <string name="user_agreement">User Agreement</string>
    <string name="read_the_document_below_and_agree_to_the_terms_to_proceed">Read the document below and agree to the terms to proceed.</string>
    <string name="terms">Any user signing up on this will be considered as GASTOS PROVIDER and he/she agrees to offer a commission Percentage, given text field in shop profile, according to his/her own comfort of business so that we can use it as a discount on every billed amount of the GASTOS customer.\n\nWe hereby declare that the payment of the billed amount after discounting will be directly reflected in the PROVIDER’s account as of which we don’t keep any money in-between the transaction.\n\nThe received amount will be only X% less (X = value of percentage commission given by the provider) as of the bill created by the PROVIDER. The PROVIDER’s UPI address and payment receivable information will be asked and will not disclosed or shared to anyone or anywhere. The information which will be visible in our main application and before the users are mentioned below along with their purpose: • Images – All images posted by the provider will be shown in his profile page in the user application (their cover photo of the shop and other images related to their businesses) • Owner Name – At Shop profile page so that user can know about the Provider • Shop Address – At shop profile to help user to get clear idea about the shop address and can reach there • Shop Co-ordinates – At shop profile so that user can directly navigate to the shop location saved by the Provider • Commission Percentage – At shop profile in user app as well as in other pages inside user application so that user can see how much discount the shop is giving, as we are not keeping money in between the transaction so the entered Commission value will be depending on their business and how much they want to offer and grow. • Contact Number – At shop profile page in GASTOS user application so that a communication can be done between the both for services related to their business or order delivery (if they provide) or order pickup (if they provide) GASTOS is committed to ensuring that the app is as useful and efficient as possible. For that reason, we reserve the right to make changes to the app or to charge for its services, at any time and for any reason. We will never charge you for the app or its services without making it</string>
    <string name="i_have_read_all_the_terms_and_conditions_and_agree_to_them">I have read all the terms and conditions, and agree to them.</string>
    <string name="i_agree">I Agree</string>
    <string name="next">Next</string>
    <string name="my_discounts">My Discounts</string>
    <string name="on_any_billed_amount">on any Billed amount</string>
    <string name="_3_5">3/5</string>
    <string name="completed">Completed</string>
    <string name="_3_3">3/3</string>
    <string name="step">Step</string>
    <string name="no_upi_qr_added">No UPI QR added</string>
    <string name="enter_address">Enter Address</string>
    <string name="select_state">Select State</string>
    <string name="select_city">Select City</string>
    <string name="enter_area">Enter Area</string>
    <string name="select_subcategory">Select Subcategory</string>
    <string name="select_category">Select Category</string>
    <string name="shop_area">Shop Area</string>
    <string name="provider_wallet">Provider Wallet</string>
    <string name="check_balance_add_money">Check Balance/Add Money</string>
    <string name="wallet_balance">Wallet Balance</string>
    <string name="note">Note : For Marketing and Branding charges Each Coins Values One Rupee</string>
    <string name="add_coins">Add Coins</string>
    <string name="no_designs_yet">No Designs Yet</string>
    <string name="todo">todo</string>
    <string name="your_design_has_been_approved">Your Design has been Approved!</string>
    <string name="guided_by">Guided By</string>
    <string name="validate">Validate</string>
    <string name="proceed_to_pay">Proceed to Pay</string>
    <string name="select_package">Select Package</string>
    <string name="select_package_as_per_your_choice">Select package as per your choice</string>
    <string name="gastos">Gastos</string>
    <string name="perfect_for_shopkeepers_with_basic_needs">Perfect for Shopkeepers with basic needs.</string>
    <string name="image">image</string>
    <string name="double_dhamaka_offer">Double Dhamaka Offer!</string>
</resources>